--- a/bleh.html
+++ b/bleh.html
@@ -9,6 +9,10 @@
 
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
+
+        <!-- atulu is adding thisgoogle font -->
+         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet"> 
+
         <title>
 
         </title>
@@ -18,6 +22,7 @@
     <body>
         <section class="section-1">
             <p> the intro of our page</p>
+            <p> BUY AMAZING BAKERY ITEMS COMING STRIGHT OUTTA OVENS AND HOME KITCHENS BLAH BLAH </p>
         </section>
 
 
