--- a/bleh.html
+++ b/bleh.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
-        <title>
-
-        </title>
+        
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        
+        <title></title>
 
     </head>
 
@@ -23,6 +23,14 @@
 
         <section class="section-2">
             <p> some stuff about bakery and cooking</p>
+            <p>Most Profitable</p>
+            <ul>
+                <li>Cakes ---> 24%</li>
+                <li>Cookies --> 12%</li>
+                <li>Bread/Rolls --> 11%</li>
+                <li>Cupcakes --> 18%</li>
+                <li>Beverages --> 5%</li>
+            </ul>
         </section>
 
 
