added content in section 3

--- a/bleh.html
+++ b/bleh.html
@@ -13,6 +13,8 @@
         <!-- atulu is adding thisgoogle font -->
          <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet"> 
 
+         <!-- just a random comment -->
+
         <title>
 
         </title>
@@ -33,6 +35,7 @@
 
         <section class="section-3">
             <p> we write about idk, home delivery and shit maybe</p>
+            <p> ah yes, we write more about some random stuff </p>
         </section>
     </body>
 </html>
