--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title> Whisk </title>
+        <title> Whisked </title>
 
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -15,15 +15,52 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
         <!-- google fonts should come here -->
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 
         <!-- CSS file -->
         <link rel="stylesheet" href="css/styles.css">
     </head>
-    
-    <body>
-        <section id="intro-section">
-            <h1> WELCOME TO BAKER'S TREET </h1>
 
+    <body>
+        <!-- NAVBAR -->
+
+        <nav class="navbar navbar-expand-lg navbar-light"> 
+            <a class="navbar-brand" href="">Whisked</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#footer">Sell</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="store.html">Store</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- NAVBAR -->
+
+        <section id="intro-section">
+            <div class="row">
+                <div class="col-md-7 intro-para">
+                    <h1> Happiness is homemade </h1>
+                    <br>
+                    <p>Pick up your whisk and start baking.<br>Sell or buy delicious confectionaries baked at home. We've got your back ;)</p>
+
+                    <br>
+                    <button type="button" class="btn btn-lg btn-info">Visit Store</button> &nbsp; &nbsp;
+                    <button type="button" class="btn btn-lg btn-info">Sell Bakery</button>
+
+                </div>
+                <img class="col-md-5 intro-food" src="images/intro-food.svg" alt="food">
+            </div>
         </section>
 
 
