Modified quotes section, improved the content and also italicized it.w Modified section 1 buttons

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                     <br>
                     <button type="button" class="btn btn-lg btn-light">Visit Store</button> &nbsp; &nbsp;
-                    <button type="button" class="btn btn-lg btn-light">Sell Bakery</button>
+                    <button type="button" class="btn btn-lg btn-light">&nbsp; &nbsp; &nbsp; &nbsp;Sell&nbsp; &nbsp; &nbsp; &nbsp;</button>
 
                 </div>
                 <img class="col-md-5 intro-food" src="images/intro-food.svg" alt="food">
@@ -111,7 +111,7 @@
                             <div class="row align-items-center h-100">
                                 <div class="col-12 col-md-10 col-lg-7 col-xl-6">
                                     <div class="caption animated fadeIn">
-                                        <h2 >"Bake that cake, not your face"</h2>
+                                        <p>"I'm a regular customer. The people in here aren't business minded. They are here to make others taste their wonderful delicacies prepared with love. And that's what makes Whisked so good."</p>
                                         <p >-Kylie Jenner</p>
                                     </div>
                                 </div>
@@ -123,8 +123,8 @@
                             <div class="row align-items-center h-100">
                                 <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                                     <div class="caption animated fadeIn">
-                                        <h2>"A wonderful platform for everyone who wish they could reach out with their delicacies."</h2>
-                                        <p >-Your mom</p>
+                                        <p>"A wonderful platform for everyone who wish they could reach out with their delicacies."</p>
+                                        <p >- Anonymous</p>
                                     </div>
                                 </div>
                             </div>
@@ -135,8 +135,8 @@
                             <div class="row align-items-center h-100">
                                 <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                                     <div class="caption animated fadeIn">
-                                        <h2 >"Put the bun in the oven, not your woman"</h2>
-                                        <p >-The Nazis</p>
+                                        <p>"I'm in love with Whisked. I get to order tasty homemade cakes, and also sell some of my own recipes."</p>
+                                        <p >-John Legend</p>
                                     </div>
                                 </div>
                             </div>
