Added floating animations to SVG using CSS. Added dynamic year display using JS. Attempted to add Fade In and Out animations based on Scroll, wasn't working as expected

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
         <!-- JS, Popper.js, and jQuery -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"</s    cript>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-        <!-- google fonts should come here -->
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+            <!-- google fonts should come here -->
+            <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 
-        <link href="https://fonts.googleapis.com/css2?family=Esteban&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
-
-
-        <!-- FONT AWESOME - ATUL'S ACCNT (DON'T USE ANYWHERE ELSE) -->
-        <script src="https://kit.fontawesome.com/39286e5c01.js" crossorigin="anonymous"></script>
+            <link href="https://fonts.googleapis.com/css2?family=Esteban&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
 
 
-        <!-- CSS file -->
-        <link rel="stylesheet" href="css/styles.css">
+            <!-- FONT AWESOME - ATUL'S ACCNT (DON'T USE ANYWHERE ELSE) -->
+            <script src="https://kit.fontawesome.com/39286e5c01.js" crossorigin="anonymous"></script>
+
+
+            <!-- CSS file -->
+            <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
@@ -67,7 +67,7 @@
                     <button type="button" class="btn btn-lg btn-light">&nbsp; &nbsp; &nbsp; &nbsp;Sell&nbsp; &nbsp; &nbsp; &nbsp;</button>
 
                 </div>
-                <img class="col-md-5 intro-food" src="images/intro-food.svg" alt="food">
+                <img class="col-md-5 intro-food float" src="images/intro-food.svg" alt="food">
             </div>
         </section>
 
@@ -77,7 +77,7 @@
 
             <div class ="row">
 
-                <img class="col-md-5 scooter" src="images/scooter.svg" alt="delivery">
+                <img class="col-md-5 scooter float" src="images/scooter.svg" alt="delivery">
 
                 <div class="col-md-7 features-para rounded">
                     <h1 class="tagline">Why Whisked?</h4>
@@ -193,5 +193,6 @@
         <!-- Footer -->
 
 
+        <script src="index.js" charset="utf-8"></script>
     </body>
 </html>
