--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <!-- NAVBAR -->
 
-        <section id="intro-section" style="background-image: url(images/flower-bg.jpg);">
+        <section id="intro-section">
             <div class="row">
                 <div class="col-md-7 intro-para">
                     <h1 class="tagline"> 'Happiness is homemade' </h1>
@@ -119,7 +119,7 @@
                     <h1 class="tagline">Why Whisked?</h4>
                     <ul class="list-unstyled list-inline">
                         <li>
-                            <i class="fas fa-handshake fa-1x"></i>&nbsp;&nbsp;Got some delicious dessert baking in the oven, and want others to taste?Join our website as seller.
+                            <i class="fas fa-handshake fa-1x"></i>&nbsp;&nbsp;Got some delicious dessert baking in the oven, and want others to taste? Join our website as a seller.
                         </li>
                         <li>
                             <i class="fas fa-cheese fa-1x"></i>&nbsp;&nbsp;Locate nearest bakery and get ready to dig into delicious confectionaries.
@@ -134,6 +134,7 @@
                     <br>
                     <p class="three">We make sure that your dessert reach your doorstep.</p>
                     <br>-->
+                    &nbsp; &nbsp;
 
                     <button type="button" id="body-info" class="btn btn-lg btn-light">Learn More</button> &nbsp; &nbsp;
 
@@ -143,7 +144,7 @@
         </section>
 
 
-        <section id="section-3" style="background-image: url(images/flower.jpg);">
+        <section id="section-3"> 
 
             <div id="carousel" class="carousel slide hero-slides" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -183,7 +184,7 @@
                                 <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                                     <div class="caption animated fadeIn">
                                         <p class="review">"I'm in love with Whisked. I get to order tasty homemade cakes, and also sell some of my own recipes."</p>
-                                        <p class="user">-Adolf Hiler</p>
+                                        <p class="user">-Adolf Hitler</p>
                                     </div>
                                 </div>
                             </div>
