--- a/bleh.html
+++ b/bleh.html
@@ -13,6 +13,8 @@
         <!-- atulu is adding thisgoogle font -->
          <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet"> 
 
+         <link rel="stylesheet" href="css/styles.css">
+
          <!-- just a random comment -->
 
         <title>
@@ -22,6 +24,7 @@
     </head>
 
     <body>
+        <script src="trial.js" charset="utf-8"></script>
         <section class="section-1">
             <p> the intro of our page</p>
             <p> BUY AMAZING BAKERY ITEMS COMING STRIGHT OUTTA OVENS AND HOME KITCHENS BLAH BLAH </p>
