--- a/index.html
+++ b/index.html
@@ -11,47 +11,31 @@
 
         <!-- JS, Popper.js, and jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-            <!-- google fonts should come here -->
-            <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <!-- google fonts should come here -->
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 
-            <link href="https://fonts.googleapis.com/css2?family=Esteban&display=swap" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
-
-
-            <!-- FONT AWESOME - ATUL'S ACCNT (DON'T USE ANYWHERE ELSE) -->
-            <script src="https://kit.fontawesome.com/39286e5c01.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Esteban&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
 
 
-            <!-- CSS file -->
-            <link rel="stylesheet" href="css/styles.css">
+        <!-- FONT AWESOME - ATUL'S ACCNT (DON'T USE ANYWHERE ELSE) -->
+        <script src="https://kit.fontawesome.com/39286e5c01.js" crossorigin="anonymous"></script>
+
+
+        <!-- CSS file -->
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/navbar-footer.css">
+
     </head>
 
     <body>
         <!-- NAVBAR -->
 
-        <nav class="navbar navbar-expand-lg navbar-default" style="background-image: url(images/nav-bg.jpg);"> 
-            <a class="navbar-brand" href="">Whisked</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarToggler">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#footer">Sell</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="store.html">Store</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <script src="navbar.js" charset="utf-8"></script>
 
         <!-- NAVBAR -->
 
@@ -72,8 +56,8 @@
         </section>
 
         <!-- MODAL -->
-       <div class="modal fade" id="storeInfoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
+        <div class="modal fade" id="storeInfoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                                                                                aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -88,7 +72,7 @@
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Email address</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                                    placeholder="Enter email">
+                                                                                                 placeholder="Enter email">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Password</label>
@@ -129,14 +113,14 @@
                         </li>
                     </ul>
                     <!--<p class="one"><i class="far fa-handshake fa-2x"></i>Got some delicious dessert baking in the oven, and want others to taste? Join our website as seller.</p>
-                    <br>
-                    <p class="two">Locate nearest bakery and get ready to dig into delicious confectionaries.</p>
-                    <br>
-                    <p class="three">We make sure that your dessert reach your doorstep.</p>
-                    <br>-->
-                    &nbsp; &nbsp;
+                        <br>
+                        <p class="two">Locate nearest bakery and get ready to dig into delicious confectionaries.</p>
+                        <br>
+                        <p class="three">We make sure that your dessert reach your doorstep.</p>
+                        <br>-->
+                        &nbsp; &nbsp;
 
-                    <button type="button" id="body-info" class="btn btn-lg btn-light">Learn More</button> &nbsp; &nbsp;
+                        <button type="button" id="body-info" class="btn btn-lg btn-light">Learn More</button> &nbsp; &nbsp;
 
 
                 </div>
@@ -205,44 +189,7 @@
 
 
         <!-- Footer -->
-        <footer class="page-footer font-small pt-4">
-
-            <!-- Footer Elements -->
-            <div class="container">
-
-                <!-- Social buttons -->
-                <ul class="list-unstyled list-inline text-center">
-                    <li class="list-inline-item">
-                        <a href="#" class="btn-floating btn-fb mx-1">
-                            <i class="fab fa-facebook-f fa-2x"> </i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" class="btn-floating btn-tw mx-1">
-                            <i class="fab fa-twitter fa-2x"> </i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" class="btn-floating btn-gplus mx-1">
-                            <i class="fab fa-google-plus-g fa-2x"> </i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" class="btn-floating btn-gplus mx-1">
-                            <i class="fab fa-instagram fa-2x"></i>
-                        </a>
-                    </li>
-                </ul>
-                <!-- Social buttons -->
-
-            </div>
-            <!-- Footer Elements -->
-
-            <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">&copy; 2020 Copyright: Whisked</div>
-            <!-- Copyright -->
-
-        </footer>
+        <script src="footer.js" charset="utf-8"></script>
         <!-- Footer -->
 
 
