Made both Index.html and stores.html responsive. Updated a lot of CSS properties too.

--- a/stores.html
+++ b/stores.html
@@ -89,10 +89,10 @@
         <!-- ITEMS MENU  -->
         <section id="items-card">
             <!-- Heading of the Item menu -->
-            <div class="item-card-header">
-                <div class="line1"></div>
-                <div class="heading d-flex justify-content-center">Top Selling items</div>
-                <div class="line2"></div>
+            <div class="row item-card-header">
+                <div class="col line1"></div>
+                <div class="col heading d-flex justify-content-center">Top Selling items</div>
+                <div class="col line2"></div>
             </div>
 
             <div class="item-wrapper">
@@ -225,14 +225,14 @@
                     </div>
                 </div>
             </div>
-            <div class="item-card-footer">
-                <div class="prev"><a href="#" class="item-nav"><i class="fas fa-arrow-left fa-4px"></i></a></div>
-                <div class="pages">
+            <div class="row item-card-footer">
+                <div class="col prev"><a href="#" class="item-nav"><i class="fas fa-arrow-left fa-4px"></i></a></div>
+                <div class="col pages">
                     <div id="one" class="number"><a href="#">1</a></div>
                     <div id="two" class="number"><a href="#">2</a></div>
                     <div id="three" class="number"><a href="#">3</a></div>
                 </div>
-                <div class="next"><a href="#" class="item-nav"><i class="fas fa-arrow-right fa-4px"></i></a></div>
+                <div class="col next"><a href="#" class="item-nav"><i class="fas fa-arrow-right fa-4px"></i></a></div>
             </div>
         </section>
 
