Created sell.html which contains a form for selling dishes

--- a/stores.html
+++ b/stores.html
@@ -109,7 +109,7 @@
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
                                 123 Reviews</p>
-                        <a href="#" class="btn btn-info">Buy Now</a>
+                        <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -125,7 +125,7 @@
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
                             123 Reviews</p>
-                        <a href="#" class="btn btn-info">Buy Now</a>
+                        <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -141,7 +141,7 @@
                             <i class="far fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
                             123 Reviews</p>
-                        <a href="#" class="btn btn-info">Buy Now</a>
+                        <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -157,7 +157,7 @@
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>
                             123 Reviews</p>
-                        <a href="#" class="btn btn-info">Buy Now</a>
+                        <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -173,7 +173,7 @@
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
                             123 Reviews</p>
-                        <a href="#" class="btn btn-info">Buy Now</a>
+                        <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -189,7 +189,7 @@
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>
                             123 Reviews</p>
-                        <a href="#" class="btn btn-info">Buy Now</a>
+                        <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -205,7 +205,7 @@
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
                             123 Reviews</p>
-                        <a href="#" class="btn btn-info">Buy Now</a>
+                        <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -221,7 +221,7 @@
                             <i class="far fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
                             123 Reviews</p>
-                        <a href="#" class="btn btn-info">Buy Now</a>
+                        <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
             </div>
