This commit implemented Ajax requests of item descriptions. Apart from that there were lot of clean-up works, made about.html responsive in phone-screens.

--- a/about.html
+++ b/about.html
@@ -60,18 +60,14 @@
                      </p>
                  </div>
                   <div class ="row">
-                   <img class="col-md-2" class="circles"  src="images/biscuit.svg" alt="delivery">
-                   <img class="col-md-2" class="circles" src="images/bread.svg" alt="delivery">
-                   <img class="col-md-2" class="circles"  src="images/cake.svg" alt="delivery">
-                   <img class="col-md-2" class="circles"  src="images/dessert.svg" alt="delivery">
-                   <img class="col-md-2" class="circles"  src="images/brownie.svg" alt="delivery"> 
-                   <img class="col-md-2" class="circles"  src="images/donut.svg" alt="delivery">
+                   <img class="col-2 circles"  src="images/biscuit.svg" alt="delivery">
+                   <img class="col-2 circles"  src="images/bread.svg" alt="delivery">
+                   <img class="col-2 circles"  src="images/cake.svg" alt="delivery">
+                   <img class="col-2 circles"  src="images/dessert.svg" alt="delivery">
+                   <img class="col-2 circles"  src="images/brownie.svg" alt="delivery"> 
+                   <img class="col-2 circles"  src="images/donut.svg" alt="delivery">
                  </div>
                    </section>
-
-
-
-
 
                 <script src="footer.js" charset="utf-8"></script>
         <!-- Footer -->
