--- a/stores.html
+++ b/stores.html
@@ -100,15 +100,16 @@
                     <img class="card-img-top" src="images/item-1.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h4 class="card-title">Cupcake</h4>
+                         <a id="item-1" href="#" onclick="itemModal(this.id);event.preventDefault();">Learn More</a>
                         <br>
-                        <h1 class="price">$30</h1>
+                        <h1 class="price">Rs. 300</h1>
                         <p class="card-text">
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
-                                123 Reviews</p>
+                                23 Reviews</p>
                         <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
@@ -116,15 +117,16 @@
                     <img class="card-img-top" src="images/item-2.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h4 class="card-title">Chocolate Cake</h4>
+                         <a id="item-2" href="#" onclick="itemModal(this.id);event.preventDefault();">Learn More</a>
                         <br>
-                        <h1 class="price">$55</h1>
+                        <h1 class="price">Rs. 550</h1>
                         <p class="card-text">
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
-                            123 Reviews</p>
+                            13 Reviews</p>
                         <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
@@ -132,15 +134,16 @@
                     <img class="card-img-top" src="images/item-3.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h4 class="card-title">Chocolate Cookies</h4>
+                         <a id="item-3" href="#" onclick="itemModal(this.id);event.preventDefault();">Learn More</a>
                         <br>
-                        <h1 class="price">$15</h1>
+                        <h1 class="price">Rs. 600</h1>
                         <p class="card-text">
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
-                            123 Reviews</p>
+                            12 Reviews</p>
                         <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
@@ -148,15 +151,16 @@
                     <img class="card-img-top" src="images/item-5.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h4 class="card-title">Banana Bread</h4>
+                         <a id="item-4" href="#" onclick="itemModal(this.id);event.preventDefault();">Learn More</a>
                         <br>
-                        <h1 class="price">$30</h1>
+                        <h1 class="price">Rs. 300</h1>
                         <p class="card-text">
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>
-                            123 Reviews</p>
+                            120 Reviews</p>
                         <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
@@ -164,15 +168,16 @@
                     <img class="card-img-top" src="images/item-7.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h4 class="card-title">Donuts</h4>
+                         <a id="item-5" href="#" onclick="itemModal(this.id);event.preventDefault();">Learn More</a>
                         <br>
-                        <h1 class="price">$20</h1>
+                        <h1 class="price">Rs. 200</h1>
                         <p class="card-text">
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
-                            123 Reviews</p>
+                            143 Reviews</p>
                         <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
@@ -180,15 +185,16 @@
                     <img class="card-img-top" src="images/item-8.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h4 class="card-title">Cinnamon Rolls</h4>
+                         <a id="item-6" href="#" onclick="itemModal(this.id);event.preventDefault();">Learn More</a>
                         <br>
-                        <h1 class="price">$15</h1>
+                        <h1 class="price">Rs. 150</h1>
                         <p class="card-text">
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>
-                            123 Reviews</p>
+                            12 Reviews</p>
                         <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
@@ -196,15 +202,16 @@
                     <img class="card-img-top" src="images/item-6.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h4 class="card-title">Pancake</h4>
+                         <a id="item-7" href="#" onclick="itemModal(this.id);event.preventDefault();">Learn More</a>
                         <br>
-                        <h1 class="price">$24</h1>
+                        <h1 class="price">Rs. 240</h1>
                         <p class="card-text">
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
-                            123 Reviews</p>
+                            23 Reviews</p>
                         <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
@@ -212,15 +219,16 @@
                     <img class="card-img-top" src="images/item-9.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h4 class="card-title">Caramel Fudge</h4>
+                         <a id="item-8" href="#" onclick="itemModal(this.id);event.preventDefault();">Learn More</a>
                         <br>
-                        <h1 class="price">$15</h1>
+                        <h1 class="price">Rs. 150</h1>
                         <p class="card-text">
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="fas fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>&nbsp;
                             <i class="far fa-star fa-1x"></i>
-                            123 Reviews</p>
+                            18 Reviews</p>
                         <a href="#" class="btn btn-info">Order Now</a>
                     </div>
                 </div>
@@ -236,9 +244,20 @@
             </div>
         </section>
 
-        
+        <!-- Items Modal -->
+        <div id="items-modal" class="modal">
+            <div class="items-modal-content">
+                <span class="items-modal-close">&times;</span>
+                <div id="item-description">Fetching Data...</div>
+            </div>
+        </div>
+
         <!-- Footer -->
         <script src="footer.js" charset="utf-8"></script>
         <!-- Footer -->
+
+        <!-- stores.js -->
+        <script src="stores.js" charset="utf-8"></script>
+        <!-- stores.js -->
     </body>
 </html>
